# af3-neutron

./: .gitignore  pyproject.toml  run_neutron_refine.py
src/af3_neutron/: __init__.py  af3_runner.py  kinematics.py  loss.py  runner.py  sampler.py  sfc_adapter.py  topology.py
src/af3_neutron.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/af3_neutron/_wrapper/: __init__.py  diffusion.py  trunk.py
tests/: test_batched_inference.py  test_batched_integration.py  test_integration.py  test_loss_coupling.py  test_sfc_integration.py
